--- a/_site.yml
+++ b/_site.yml
@@ -15,3 +15,7 @@ navbar:
     - icon: fa fa-rss
       href: index.xml
 output: distill::distill_article
+collections:
+  posts:
+    disqus: adityamangal
+    share: [twitter, linkedin]
